--- a/src/styles.css
+++ b/src/styles.css
@@ -99,6 +99,18 @@ button:active {
     display: none;
   }
 
+  .chat__main {
+  width: 100%;
+  height: 100vh;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  }
+
+  .data{
+    display:none;
+  }
+
   .header__select {
     display: flex;
     flex-direction: column;
